--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/input": "^2.4.27",
+    "@heroui/modal": "^2.2.23",
     "@heroui/number-input": "^2.0.17",
     "@heroui/react": "^2.8.4",
     "@heroui/system": "^2.4.22",
