--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/system": "^2.4.22",
     "@heroui/theme": "^2.4.22",
     "@hookform/resolvers": "^5.2.2",
+    "@iconify/react": "^6.0.2",
     "@tanstack/react-query": "^5.90.2",
     "framer-motion": "^12.23.21",
     "next": "15.5.3",
