--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify/react": "^6.0.2",
     "@tanstack/react-query": "^5.90.2",
     "framer-motion": "^12.23.21",
+    "mixpanel-browser": "^2.70.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
