--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@flags-sdk/growthbook": "^0.1.0",
+    "@growthbook/growthbook": "^1.6.1",
+    "@growthbook/growthbook-react": "^1.6.1",
     "@heroui/input": "^2.4.27",
     "@heroui/modal": "^2.2.23",
     "@heroui/number-input": "^2.0.17",
@@ -17,13 +20,20 @@
     "@heroui/theme": "^2.4.22",
     "@hookform/resolvers": "^5.2.2",
     "@iconify/react": "^6.0.2",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/personalization-plugin": "^2.4.2",
+    "@sanity/vision": "^4.10.1",
     "@tanstack/react-query": "^5.90.2",
     "framer-motion": "^12.23.21",
     "mixpanel-browser": "^2.70.0",
     "next": "15.5.3",
+    "next-sanity": "^11.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "sanity": "^4.10.1",
+    "styled-components": "^6.1.19",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
