feat: growthbook experiment implement app/page.tsx: growthbook implementation and provider shared/lib/growthbook/growthbook-client.ts: create grwothbook client shared/lib/growthbook/growthbook.ts: get growthboook functioon shared/providers/growthbook-provider.tsx: create growthbook provider widgets/posts-feed/ui/posts-feed.tsx: growthbook's feature conditional use with useFeatureValue hook

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@flags-sdk/growthbook": "^0.1.0",
+    "@growthbook/growthbook": "^1.6.1",
+    "@growthbook/growthbook-react": "^1.6.1",
     "@heroui/input": "^2.4.27",
     "@heroui/modal": "^2.2.23",
     "@heroui/number-input": "^2.0.17",
