--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ky": "^1.11.0",
     "mixpanel-browser": "^2.70.0",
     "next": "15.5.3",
+    "next-intl": "^4.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
