--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroui/theme": "^2.4.22",
     "@hookform/resolvers": "^5.2.2",
     "@iconify/react": "^6.0.2",
+    "@sentry/nextjs": "^10.17.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
