fix: add api url for data fetch into secrets

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,17 +11,27 @@ jobs:
     env:
       NEXT_PUBLIC_GROWTHBOOK_CLIENT_KEY: ${{ secrets.NEXT_PUBLIC_GROWTHBOOK_CLIENT_KEY }}
       NEXT_PUBLIC_GROWTHBOOK_API_HOST: ${{ secrets.NEXT_PUBLIC_GROWTHBOOK_API_HOST }}
+      API_URL: ${{ secrets.API_URL }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          cache: "npm"
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Build Next.js app
+        run: npm run build
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+
       - name: Run Playwright tests
         run: npx playwright test
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
