fix: delete sentry files

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,6 +12,7 @@ jobs:
       NEXT_PUBLIC_GROWTHBOOK_CLIENT_KEY: ${{ secrets.NEXT_PUBLIC_GROWTHBOOK_CLIENT_KEY }}
       NEXT_PUBLIC_GROWTHBOOK_API_HOST: ${{ secrets.NEXT_PUBLIC_GROWTHBOOK_API_HOST }}
       API_URL: ${{ secrets.API_URL }}
+      CI: ${{ secrets.CI }}
     steps:
       - uses: actions/checkout@v4
 
