--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,6 +13,8 @@ jobs:
       NEXT_PUBLIC_GROWTHBOOK_API_HOST: ${{ secrets.NEXT_PUBLIC_GROWTHBOOK_API_HOST }}
       API_URL: ${{ secrets.API_URL }}
       CI: ${{ secrets.CI }}
+      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
     steps:
       - uses: actions/checkout@v4
 
