--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "framer-motion": "^12.23.22",
+    "json-server": "^1.0.0-beta.3",
     "ky": "^1.11.0",
     "mixpanel-browser": "^2.70.0",
     "next": "15.5.3",
