--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@growthbook/growthbook-react": "^1.6.1",
     "@heroui/card": "^2.2.24",
     "@heroui/input": "^2.4.27",
+    "@heroui/link": "^2.2.23",
     "@heroui/modal": "^2.2.23",
     "@heroui/number-input": "^2.0.17",
     "@heroui/react": "^2.8.4",
-    "@heroui/system": "^2.4.22",
-    "@heroui/theme": "^2.4.22",
+    "@heroui/system": "^2.4.23",
+    "@heroui/theme": "^2.4.23",
     "@hookform/resolvers": "^5.2.2",
     "@iconify/react": "^6.0.2",
     "@sentry/nextjs": "^10.17.0",
