--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "babel-plugin-react-compiler": "^1.0.0",
+    "drizzle-orm": "^0.44.6",
     "framer-motion": "^12.23.22",
     "json-server": "^1.0.0-beta.3",
     "ky": "^1.11.0",
@@ -38,6 +39,7 @@
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "pino": "^10.0.0",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
@@ -54,9 +56,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/rtl-detect": "^1.0.3",
+    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5",
     "wait-on": "^9.0.1"
   }
