feat: implement authentication flow with login and signup pages
- Added new login and signup pages with form components for user authentication.
- Integrated Google sign-in functionality using Supabase.
- Implemented validation schemas for login and signup forms using Zod.
- Enhanced middleware to manage user sessions and protect routes.
- Updated package dependencies to include necessary types and libraries for authentication.

--- a/package.json
+++ b/package.json
@@ -29,10 +29,18 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/jsonwebtoken": "^9.0.10",
     "babel-plugin-react-compiler": "^1.0.0",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.4.1",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "framer-motion": "^12.23.22",
+    "google-auth-library": "^10.4.1",
     "json-server": "^1.0.0-beta.3",
+    "jsonwebtoken": "^9.0.2",
     "ky": "^1.11.0",
     "mixpanel-browser": "^2.70.0",
     "next": "15.5.3",
@@ -56,7 +64,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/rtl-detect": "^1.0.3",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
