fix: github actions drizzle-kit error fix

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "build:ci": "SKIP_LINT=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
     "@flags-sdk/growthbook": "^0.1.0",
@@ -57,7 +57,8 @@
     "rtl-detect": "^1.1.2",
     "tailwindcss": "^4",
     "zod": "^4.1.11",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "drizzle-kit": "^0.31.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -66,7 +67,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/rtl-detect": "^1.0.3",
-    "drizzle-kit": "^0.31.5",
     "eslint": "^9.38.0",
     "eslint-config-next": "15.5.3",
     "tsx": "^4.20.6",
