--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroui/theme": "^2.4.23",
     "@hookform/resolvers": "^5.2.2",
     "@iconify/react": "^6.0.2",
+    "@playwright/test": "^1.55.1",
     "@sentry/nextjs": "^10.17.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
@@ -49,6 +50,7 @@
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "pino": "^10.0.0",
+    "pino-pretty": "^11.0.0",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -56,13 +58,13 @@
     "react-scan": "^0.4.3",
     "rtl-detect": "^1.1.2",
     "tailwindcss": "^4",
+    "wait-on": "^9.0.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.8",
     "drizzle-kit": "^0.31.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@playwright/test": "^1.55.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -70,7 +72,6 @@
     "eslint": "^9.38.0",
     "eslint-config-next": "15.5.3",
     "tsx": "^4.20.6",
-    "typescript": "^5",
-    "wait-on": "^9.0.1"
+    "typescript": "^5"
   }
 }
